# Pollse

./: .babelrc  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
client/: App.tsx  index.html  index.tsx  types.d.ts
client/components/: answer.tsx  error.tsx  header.tsx
client/pages/: Home.tsx  MakePoll.tsx  Results.tsx  Vote.tsx
client/stylesheets/: app.scss
rust_server/: Cargo.toml
rust_server/src/: error_handler.rs  lib.rs  main.rs  routers.rs  websocket.rs
rust_server/src/database/: connection.rs
rust_server/src/routers/: general_router.rs  poll_router.rs
server/: server.ts  types.d.ts
server/Controllers/: pollController.ts
server/Models/: databaseModel.ts
server/Routes/: pollRouter.ts
