[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
rusqlite = "0.31.0"
sha1 = "0.10.6"
base64 = "0.22.0"
